--- a/bower.json
+++ b/bower.json
@@ -20,6 +20,7 @@
     "angular-scenario": ">=1.2.0",
     "angular": ">=1.2.0",
     "angular-cookies": ">=1.2.0",
-    "angular-sanitize": ">=1.2.0"
+    "angular-sanitize": ">=1.2.0",
+    "angular-local-storage": "0.1.4"
   }
 }
