--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "ngconexo",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "authors": [
     {
       "name": "Isaac Pereira",
@@ -14,13 +14,15 @@
     "Gruntfile.js",
     "**/.*"
   ],
-  "dependencies": {},
+  "dependencies": {
+    "angular-local-storage": "0.1.4"
+
+    },
   "devDependencies": {
     "angular-mocks": ">=1.2.0",
     "angular-scenario": ">=1.2.0",
     "angular": ">=1.2.0",
     "angular-cookies": ">=1.2.0",
-    "angular-sanitize": ">=1.2.0",
-    "angular-local-storage": "0.1.4"
+    "angular-sanitize": ">=1.2.0"
   }
 }
