--- a/bower.json
+++ b/bower.json
@@ -1,13 +1,13 @@
 {
-  "name": "ngconexo",
-  "version": "0.1.3",
+  "name": "ng-conexo",
+  "version": "0.1.4",
   "authors": [
     {
       "name": "Isaac Pereira",
       "email": "pereira.zc@gmail.com"
     }
   ],
-  "main": ["dist/ngconexo.js"],
+  "main": ["dist/ng-conexo.js"],
   "ignore": [
     "src",
     "test",
@@ -16,8 +16,7 @@
   ],
   "dependencies": {
     "angular-local-storage": "0.1.4"
-
-    },
+  },
   "devDependencies": {
     "angular-mocks": ">=1.2.0",
     "angular-scenario": ">=1.2.0",
